# local-rag

./: .envrc  .gitignore  .mcp.json  CLAUDE.md  CONTRIBUTING.md  LICENSE  NANOCLAW-agents.md  NANOCLAW.md  RAGLING.md  README.md  config.example.json  flake.nix  pyproject.toml
.claude/skills/: SPEC.md  (+1 more)
.envrc.d/: beads.sh  dolt.sh
.github/: pull_request_template.md
docs/: ARCHITECTURE.md  DESIGN.md  architecture.md  automatic-indexing.md  cli.md  configuration.md  emclient-schema.md  getting-started.md  hybrid-search-and-rrf.md  indexing.md  multi-agent.md  ollama-and-embeddings.md  project-setup.md  spec-template.md
results/: benchmarks.csv  benchmarks.md
scripts/: benchmark.py  benchmark_matrix.toml  check_specs.py  explore_emclient.py
tests/: helpers.py  test_audio_metadata.py  test_auth.py  test_auto_indexer.py  test_base.py  test_base_indexer.py  test_calibre_indexer.py  test_chunker.py  test_cli.py  test_code_parser.py  test_config.py  test_config_migration.py  test_config_watcher.py  test_converter_config.py  test_db.py  test_discovery.py  test_doc_store.py  test_docling_bridge.py  test_docling_convert.py  test_email_indexer.py  test_embeddings.py  test_factory.py  test_format_routing.py  test_git_commands.py  test_git_indexer.py  test_index_tool_watch.py  test_indexing_queue.py  test_indexing_status.py  test_integration.py  test_leader.py  test_logging.py  test_mcp_server.py  test_obsidian_indexer.py  test_parsers.py  test_path_mapping.py  test_path_validation.py  test_project_indexer.py  test_ragignore.py  test_rescore.py  test_rss_indexer.py  (+15 more)
(+158 files in other folders)
