[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ragling"
version = "0.1.0"
description = "Docling-powered local RAG with shared document cache and per-group indexes"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "sqlite-vec>=0.1.6",
    "ollama>=0.4.0",
    "click>=8.0",
    "beautifulsoup4>=4.12.0",
    "pyyaml>=6.0",
    "mcp>=1.0.0",
    "tree-sitter-language-pack>=0.7.0",
    "rich>=13.0",
    "docling>=2.66.0",
    "docling-core>=2.56.0",
    "transformers>=4.30.0",
    "watchdog>=4.0",
    "cryptography>=41.0",
]

[project.scripts]
ragling = "ragling.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "ruff",
    "mypy>=1.0",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]